crates/runtime/tests/models/snapshots/integration_models__models__search__multi_text_column_sql_text_search_basic.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp
snapshot_kind: text
---
[
  {
    "cp_catalog_page_sk": 7,
    "trunc(text_search().score,Int64(3))": 0.024,
    "cp_department": "DEPARTMENT"
  },
  {
    "cp_catalog_page_sk": 16,
    "trunc(text_search().score,Int64(3))": 0.024,
    "cp_department": "DEPARTMENT"
  },
  {
    "cp_catalog_page_sk": 19,
    "trunc(text_search().score,Int64(3))": 0.024,
    "cp_department": "DEPARTMENT"
  },
  {
    "cp_catalog_page_sk": 10,
    "trunc(text_search().score,Int64(3))": 0.024,
    "cp_department": "DEPARTMENT"
  }
]
