crates/runtime/tests/models/snapshots/integration_models__models__search__multi_text_column_sql_text_search_error_without_column_error_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: err.to_string()
snapshot_kind: text
---
HTTP error: 400 Bad Request - Failed to execute query: Error during planning: User function 'text_search' is called on table 'spice.public.qs' that has 2 full text search columns. Must call 'text_search' with column parameter, e.g. `text_search("my table", 'my query', my_search_col)`.
