crates/runtime/tests/models/snapshots/integration_models__models__search__multi_text_column_sql_text_search_no_score.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp
snapshot_kind: text
---
[
  {
    "id": 525,
    "answer": "\\[\nP(\\text{First faulty and second faulty}) = \\frac{2}{3} \\times \\frac{1}{2} = \\boxed{\\frac{1}{3}}\n\\]"
  },
  {
    "id": 772,
    "answer": "The degree of the differential equation is \\(\\boxed{2}\\), as the highest derivative present is the second derivative \\( y'' \\)."
  }
]
