crates/runtime/tests/models/snapshots/integration_models__models__search__multi_text_column_sql_text_search_projection.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 525,
    "answer": "\\[\nP(\\text{First faulty and second faulty}) = \\frac{2}{3} \\times \\frac{1}{2} = \\boxed{\\frac{1}{3}}\n\\]",
    "question": "In a group of 3 machines where 2 are faulty, what is the probability that the first two machines tested are both faulty?",
    "subject": "math",
    "_score": "6.33"
  },
  {
    "id": 772,
    "answer": "The degree of the differential equation is \\(\\boxed{2}\\), as the highest derivative present is the second derivative \\( y'' \\).",
    "question": "State the degree of the differential equation:\n$$\ny^{\\prime \\prime} = 6x + \\sin x\n$$",
    "subject": "math",
    "_score": "6.19"
  }
]
