crates/runtime/tests/models/snapshots/integration_models__models__search__multi_text_column_sql_text_search_random_error_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: e.to_string()
snapshot_kind: text
---
HTTP error: 400 Bad Request - Failed to execute query: Schema error: No field named id. Valid fields are base_table.subject.
