crates/runtime/tests/models/snapshots/integration_models__models__search__multi_text_column_with_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "7.52",
      "dataset": "qs",
      "matches": {
        "answer": [
          "Relative or \"stress\" polycythaemia, which is secondary to a depletion in the plasma volume."
        ]
      },
      "primary_key": {
        "id": 890
      }
    }
  ]
}
